tests/issues-OLD/test254.expected
Error: syntax error, near '=/=', operator expected, /home/andrew/trealla/tests/issues-OLD/test254.pl:4
